--- a/.github/workflows/recent.yml
+++ b/.github/workflows/recent.yml
@@ -12,3 +12,4 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: "https://thephd.github.io/feed.xml,https://soasis.org/posts/index.xml"
+          max_post_count: 7
