Better newline and date format

--- a/.github/workflows/recent.yml
+++ b/.github/workflows/recent.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           feed_list: "https://thephd.github.io/feed.xml,https://soasis.org/posts/index.xml"
           max_post_count: 7
-          template: "- [$title]($url) ($date)"
+          template: "- [$title]($url) ($date)$newline"
           date_format: dddd, yyyy dd mmmm
           tag_post_pre_newline: true
