--- a/.github/workflows/recent.yml
+++ b/.github/workflows/recent.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://thephd.github.io/feed.xml,https://soasis.org/posts/index.xml"
+          feed_list: "https://thephd.dev/feed.xml,https://soasis.org/posts/index.xml"
           max_post_count: 7
           template: "- [$title]($url) ($date)$newline"
           date_format: dddd, yyyy dd mmmm
